maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:23: error: not found: value hasleftWall
  if(hasleftWall(coords(0), coords(1))) {
     ^ShortestPathMaze:36: error: not found: value mhasTopWall
  if(mhasTopWall(currentCoords)) {
     ^