maze.shortestpath.ShortestPathMaze.scala.code
def getBaggleCoords():Array[Int] = {
  for(i <- 0 to getWorldHeight() - 1) {
    for(j <- 0 to getWorldWidth() - 1) {
      if(hasBaggle(j, i)) {
        return Array(j, i);
      }
    }
  }
  
  return Array(5, 2);
}

def mHasTopWall(coords:Array[Int]):Boolean = {
  if(hasTopWall(coords(0), coords(1))) {
    return true;
  }
  
  return false;
}

def mHasleftWall(coords:Array[Int]):Boolean = {
  if(hasleftWall(coords(0), coords(1))) {
    return true;
  }
  
  return false;
}

override def run() {
  var baggleCoords = getBaggleCoords();
  setIndication(baggleCoords(0), baggleCoords(1), 0);
  
  var currentCoords = baggleCoords;
  
  if(mhasTopWall(currentCoords)) {
    
  }
}